💄 fix RollRow style and change collapse TransitionRow display

--- a/ui/src/components/Views/Write/Page/PageTransition/TransitionRow/TransitionRowBody/ConditionTable/style.scss
+++ b/ui/src/components/Views/Write/Page/PageTransition/TransitionRow/TransitionRowBody/ConditionTable/style.scss
@@ -12,5 +12,4 @@
 
 .conditionEffect {
   text-align: center;
-  margin-bottom: 10px;
 }
