--- a/ui/src/components/Views/Write/Page/common/RollRow/style.scss
+++ b/ui/src/components/Views/Write/Page/common/RollRow/style.scss
@@ -15,8 +15,8 @@
 }
 
 .selectInput {
-  flex-direction: row;
   flex: 1;
+  margin-bottom: 0;
   &>select {
     flex: 1;
     margin: 0 10px;
